MDEV-375 Server crashes in THD::print_aborted_warning with log_warnings > 3

Don't use ER(xxx) in THD::close_connection(), when current_thd is already reset to NULL.
Prefer ER_THD() or ER_DEFAULT() instead.